--- a/src/layouts/main.hbs
+++ b/src/layouts/main.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>OpenLayers 3</title>
+    <title>OpenLayers 3 - {{ title }}</title>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link href='bower_components/bootstrap/dist/css/bootstrap.min.css' rel='stylesheet' media='screen'>
     <link href='http://fonts.googleapis.com/css?family=Quattrocento+Sans:400,400italic,700' rel='stylesheet' type='text/css'>
