--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -20,24 +20,24 @@ layout: main.hbs
   <div class='row'>
     <div class='col-sm-6'>
       <h3>Tiled Layers</h3>
-      <img src='theme/img/tiled-layers.png' class='thumb'>
+      <img src='assets/theme/img/tiled-layers.png' class='thumb'>
       <p>Pull tiles from OSM, Bing, MapBox, Stamen, MapQuest, and any other XYZ source you can find.  OGC mapping services and untiled layers also supported.</p>
     </div>
     <div class='col-sm-6'>
       <h3>Vector Layers</h3>
-      <img src='theme/img/vector-layers.png' class='thumb'>
+      <img src='assets/theme/img/vector-layers.png' class='thumb'>
       <p>Render vector data from GeoJSON, TopoJSON, KML, GML, and a growing number of other formats.</p>
     </div>
   </div>
   <div class='row'>
     <div class='col-sm-6'>
       <h3>Fast &amp; Mobile Ready</h3>
-      <img src='theme/img/timeline.png' class='thumb'>
+      <img src='assets/theme/img/timeline.png' class='thumb'>
       <p>Mobile support out of the box.  Build lightweight custom profiles with just the components you need.</p>
     </div>
     <div class='col-sm-6'>
       <h3>Cutting Edge &amp; Easy to Customize</h3>
-      <img src='theme/img/popup.png' class='thumb'>
+      <img src='assets/theme/img/popup.png' class='thumb'>
       <p>Map rendering leverages WebGL, Canvas 2D, and all the latest greatness from HTML5.  Style your map controls with straight-forward CSS.</p>
     </div>
   </div>
