--- a/src/theme/site.less
+++ b/src/theme/site.less
@@ -2,11 +2,37 @@
  * OpenLayers 3 Theme
  * Includes bits of the following:
  *
+ ********************************************************************************
  * Bootstrap v3.0.0
  *
  * Copyright 2013 Twitter, Inc
  * Licensed under the Apache License v2.0
  * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ ********************************************************************************
+ * Font Awesome 3.2.1
+ * the iconic font designed for Bootstrap
+ * ------------------------------------------------------------------------------
+ * The full suite of pictographic icons, examples, and documentation can be
+ * found at http://fontawesome.io.  Stay up to date on Twitter at
+ * http://twitter.com/fontawesome.
+ *
+ * License
+ * ------------------------------------------------------------------------------
+ * - The Font Awesome font is licensed under SIL OFL 1.1 -
+ *   http://scripts.sil.org/OFL
+ * - Font Awesome CSS, LESS, and SASS files are licensed under MIT License -
+ *   http://opensource.org/licenses/mit-license.html
+ * - Font Awesome documentation licensed under CC BY 3.0 -
+ *   http://creativecommons.org/licenses/by/3.0/
+ * - Attribution is no longer required in Font Awesome 3.0, but much appreciated:
+ *   "Font Awesome by Dave Gandy - http://fontawesome.io"
+ *
+ * Author - Dave Gandy
+ * ------------------------------------------------------------------------------
+ * Email: dave@fontawesome.io
+ * Twitter: http://twitter.com/byscuits
+ * Work: Lead Product Designer @ Kyruus - http://kyruus.com
  */
 
 
@@ -68,6 +94,20 @@
 // Utility classes
 @import "../../bower_components/bootstrap/less/utilities.less"; // Has to be last to override when necessary
 @import "../../bower_components/bootstrap/less/responsive-utilities.less";
+
+
+/**
+ * Font-Awesome Imports
+ * Uncomment modules that are needed.
+ */
+@import "../../bower_components/font-awesome/less/variables.less";
+@import "../../bower_components/font-awesome/less/mixins.less";
+@import "../../bower_components/font-awesome/less/path.less";
+@import "../../bower_components/font-awesome/less/core.less";
+@import "../../bower_components/font-awesome/less/bootstrap.less";
+@import "../../bower_components/font-awesome/less/extras.less";
+@import "../../bower_components/font-awesome/less/icons.less";
+
 
 /**
  * Here begins the OpenLayers style.  There are more sophisticated ways to
