--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1,6 +1,9 @@
 ---
 title: 'Welcome'
 layout: main.hbs
+head:
+ - <link rel="stylesheet" href="http://ol3js.org/en/master/build/ol.css" type="text/css">
+ - <link rel="stylesheet" href="assets/theme/index.css" type="text/css">
 ---
 
 <div id='map'></div>
