--- a/src/theme/site.less
+++ b/src/theme/site.less
@@ -76,20 +76,20 @@
 @import "../../bower_components/bootstrap/less/pager.less";
 
 // Components: Popovers
-@import "../../bower_components/bootstrap/less/modals.less";
-@import "../../bower_components/bootstrap/less/tooltip.less";
-@import "../../bower_components/bootstrap/less/popovers.less";
+// @import "../../bower_components/bootstrap/less/modals.less";
+// @import "../../bower_components/bootstrap/less/tooltip.less";
+// @import "../../bower_components/bootstrap/less/popovers.less";
 
 // Components: Misc
-@import "../../bower_components/bootstrap/less/alerts.less";
-@import "../../bower_components/bootstrap/less/thumbnails.less";
-@import "../../bower_components/bootstrap/less/media.less";
-@import "../../bower_components/bootstrap/less/labels.less";
-@import "../../bower_components/bootstrap/less/badges.less";
-@import "../../bower_components/bootstrap/less/progress-bars.less";
-@import "../../bower_components/bootstrap/less/accordion.less";
-@import "../../bower_components/bootstrap/less/carousel.less";
-@import "../../bower_components/bootstrap/less/jumbotron.less";
+// @import "../../bower_components/bootstrap/less/alerts.less";
+// @import "../../bower_components/bootstrap/less/thumbnails.less";
+// @import "../../bower_components/bootstrap/less/media.less";
+// @import "../../bower_components/bootstrap/less/labels.less";
+// @import "../../bower_components/bootstrap/less/badges.less";
+// @import "../../bower_components/bootstrap/less/progress-bars.less";
+// @import "../../bower_components/bootstrap/less/accordion.less";
+// @import "../../bower_components/bootstrap/less/carousel.less";
+// @import "../../bower_components/bootstrap/less/jumbotron.less";
 
 // Utility classes
 @import "../../bower_components/bootstrap/less/utilities.less"; // Has to be last to override when necessary
@@ -113,6 +113,9 @@
  * Here begins the OpenLayers style.  There are more sophisticated ways to
  * override Bootstrap defaults with mixins, but for now we just keep it easy.
  */
+@primary: #319FD3; 
+@secondary: #e9c669;
+
 body {
   font-family: 'Quattrocento Sans', sans-serif;
   font-size: 16px;
@@ -120,7 +123,7 @@ body {
 }
 
 .navbar {
-  background-color: #319FD3;
+  background-color: @primary;
   color: white;
 }
 .navbar-toggle {
@@ -140,7 +143,7 @@ body {
 .navbar-nav>li>a:focus,
 footer a:hover,
 footer a:focus {
-  color: #e9c669;
+  color: @secondary;
 }
 
 h1,
@@ -167,18 +170,15 @@ h1.topic {
 }
 
 a {
-  color: #428bca;
+  color: @primary;
   text-decoration: none;
 }
 a {
-  -moz-transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
+  .transition(all 0.2s); // bootstrap mixin
 }
 a:hover,
 a:focus {
-  color: #2a6496;
+  color: @secondary;
   text-decoration: none;
 }
 
@@ -196,7 +196,7 @@ a.big-link h3 {
 a.big-link:hover,
 a.big-link:focus {
   border-color: #eee;
-  color: #2a6496;
+  color: @primary;
   background-color: #f8f8f8;
 }
 
@@ -205,7 +205,7 @@ blockquote.plain {
 }
 
 footer {
-  background-color: #319FD3;
+  background-color: @primary;
   color: white;
   margin-top: 40px;
   padding: 10px;
