--- a/src/layouts/main.hbs
+++ b/src/layouts/main.hbs
@@ -12,7 +12,7 @@
   <body>
     <div class='navbar navbar-fixed-top'>
       <div class='container'>
-        <a href='/' class='navbar-brand' id='logo'>OpenLayers 3</a>
+        <a href='/' class='navbar-brand'><img src='{{ assets }}/theme/img/logo.png'>&nbsp;OpenLayers 3</a>
         <!-- button that shows up below 768px width -->
         <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-responsive-collapse'>
           <span class='icon-bar'></span>
