--- a/src/pages/quick_start.hbs
+++ b/src/pages/quick_start.hbs
@@ -5,7 +5,6 @@ head:
  - <link rel="stylesheet" href="en/<%= current %>/build/ol.css" type="text/css">
  - <link rel="stylesheet" href="assets/theme/index.css" type="text/css">
 ---
-
   <div class="col-xs-6 col-sm-9">
     <h1 class="page-topic">Quick Start</h1>
     <a name="firstmap"></a>
@@ -72,7 +71,7 @@ head:
       </div>
     </div><!-- End First Map Instructions -->
 
-    <a name="overlaywms"></a>
+    <a name="addlayer"></a>
 
     <div class="instructions">
       <h3>Adding an Overlay WMS</h3>
