Make work with latest API

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -106,7 +106,7 @@ head:
       zoom: 2
     }),
     layers: [
-      new ol.layer.TileLayer({
+      new ol.layer.Tile({
         source: new ol.source.Stamen({
           layer: 'watercolor'
         })
