--- a/src/theme/index.less
+++ b/src/theme/index.less
@@ -7,7 +7,7 @@
   margin-bottom: 10px;
 }
 #tagline p {
-  font-size: 200%;
+  font-size: 150%;
   font-style: italic;
 }
 #news {
@@ -15,7 +15,7 @@
   border: 1px solid #eee;
   background-color: #f8f8f8;
   border-radius: 2px;
-  padding: 10px;
+  padding: 10px 10px 5px;
   margin: 0 15px;
   width: 95%;
 }
