Display map controls on mouseover

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -111,7 +111,14 @@ head:
           layer: 'watercolor'
         })
       })
-    ],
-    controls: []
+    ]
   });
+
+  var container = document.getElementById('map');
+  container.onmouseover = function() {
+    container.className = 'over';
+  };
+  container.onmouseout = function() {
+    container.className = '';
+  };
 </script>
